--- a/style.sass
+++ b/style.sass
@@ -1,4 +1,118 @@
+$light-color: #f1e7e7
+$light-red: #e09b9b
+$dark-color: #b18989
+$red-color: #c95f5f    
+
 *
     box-sizing: border-box
     margin: 0
     padding: 0
+
+body
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    // align-content: center
+    margin-top: 150px
+    background-color: $light-color
+    font-family: 'Open Sans', sans-serif
+
+.wrapper
+    width: 600px
+    text-align: center
+    background-color: whitesmoke
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4)
+    border-radius: 5px
+
+.header
+    padding: 40px 30px 50px 30px
+    border-radius: 5px 5px 0 0
+    background: linear-gradient(300deg, rgba(201,95,95,1) 0%, rgba(224,155,155,1) 100%)
+
+    h2
+        color: whitesmoke
+        text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.8)
+        letter-spacing: 2px
+        padding: 10px 15px
+        font-size: 28px
+
+    .toDoInput
+        width: 70%
+        height: 40px
+        font-size: 18px
+        border: 2px solid rgba(201,95,95,0.6)
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
+        outline: none
+        border-radius: 10px
+        margin-right: 10px
+        padding: 10px
+        background-color: $light-color
+
+    .addBtn
+        padding: 10px 15px
+        border-radius: 10px
+        border: 1px solid $dark-color
+        font-weight: bold
+        color: #473e3e
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
+        background-color: $light-color
+        text-transform: uppercase
+        cursor: pointer
+        transition: background-color 0.3s, color 0.3s, transform 0.3s
+
+    .addBtn:hover
+        background-color: $dark-color
+        color: $light-color
+
+.listContainer
+    padding: 30px
+    margin: 0 0 15px 0
+
+    h3
+        text-transform: uppercase
+        letter-spacing: 2px
+
+    p
+        // display: none
+        letter-spacing: 1px 
+        padding: 20px
+
+    li
+        display: flex
+        justify-content: space-between
+        align-items: center
+        list-style: none
+        padding: 10px 15px
+        margin: 20px
+        text-shadow: 3px 3px 3px rgba(70, 69, 69, 0.4)
+        letter-spacing: 1px
+        border-radius: 5px
+        background-color: $light-color
+
+    .tools
+        display: inline-block
+
+        button
+            padding: 10px 15px
+            margin: 0 5px
+            border: none
+            border-radius: 5px
+            text-transform: uppercase
+            cursor: pointer
+            background: none
+            transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s
+
+        button:hover
+            background-color: #e7dede
+            box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
+            transform: translate(-2px, -5%)
+            
+        .complete
+            color: royalblue
+        .edit
+            color: $dark-color
+        .delete
+            color: $red-color
+
+// .popUpEditTask
