--- a/style.sass
+++ b/style.sass
@@ -1,7 +1,7 @@
 $light-color: #f1e7e7
 $light-red: #e09b9b
 $dark-color: #b18989
-$red-color: #c95f5f    
+$red-color: #c95f5f
 
 *
     box-sizing: border-box
@@ -13,17 +13,18 @@ body
     flex-direction: column
     justify-content: center
     align-items: center
-    // align-content: center
-    margin-top: 150px
+    margin: 5% 10px 5% 10px
     background-color: $light-color
     font-family: 'Open Sans', sans-serif
 
 .wrapper
-    width: 600px
     text-align: center
     background-color: whitesmoke
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4)
     border-radius: 5px
+
+.wrapperBlur
+    filter: blur(2px)
 
 .header
     padding: 40px 30px 50px 30px
@@ -38,6 +39,7 @@ body
         font-size: 28px
 
     .toDoInput
+        min-width: 230px
         width: 70%
         height: 40px
         font-size: 18px
@@ -51,6 +53,7 @@ body
 
     .addBtn
         padding: 10px 15px
+        margin: 10px
         border-radius: 10px
         border: 1px solid $dark-color
         font-weight: bold
@@ -59,43 +62,186 @@ body
         background-color: $light-color
         text-transform: uppercase
         cursor: pointer
-        transition: background-color 0.3s, color 0.3s, transform 0.3s
+        transition: background-color 0.3s, color 0.3s
 
     .addBtn:hover
         background-color: $dark-color
         color: $light-color
 
 .listContainer
-    padding: 30px
+    padding: 20px
     margin: 0 0 15px 0
 
-    h3
+    .optionsWrapper
+        display: flex
+        justify-content: space-evenly
+        margin-bottom: 20px
+
+        .options
+            display: flex
+            flex-direction: column
+            padding: 10px
+
+            h4
+                padding: 0 0 10px 0
+
+            button
+                padding: 8px
+                margin: 5px
+                font-weight: bold
+                border: none
+                border-radius: 5px
+                text-transform: uppercase
+                cursor: pointer
+                background-color: #e7dede
+                color: $dark-color
+                transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s
+
+            button:hover
+                background-color: $dark-color
+                color: #e7dede
+                box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
+                transform: translate(-2px, -5%)
+
+            .btnActive
+                transform: translateY(2px)
+                box-shadow: 3px 1px 3px rgba(0, 0, 0, 0.4)
+
+    h2
         text-transform: uppercase
         letter-spacing: 2px
 
     p
-        // display: none
-        letter-spacing: 1px 
+        letter-spacing: 1px
         padding: 20px
 
     li
         display: flex
-        justify-content: space-between
-        align-items: center
+        flex-direction: column
         list-style: none
         padding: 10px 15px
-        margin: 20px
-        text-shadow: 3px 3px 3px rgba(70, 69, 69, 0.4)
-        letter-spacing: 1px
+        margin: 20px 0px
         border-radius: 5px
         background-color: $light-color
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
+
+    .date
+        display: flex
+        flex-direction: row
+        margin: 5px 0
+        width: 100%
+        border-radius: 5px
+        background-color: #e6d6d6
+
+        span
+            font-size: 12px
+            color: #2c87d1
+            padding: 5px 10px
+
+    .taskWrapper
+        display: flex
+        justify-content: space-between
+        align-items: center
+        text-align: left
+
+        .task
+            padding: 10px
+            font-size: 20px
+            letter-spacing: 1px
+            text-shadow: 2px 2px 2px rgba(143, 143, 143, 0.6)
+
+        .tools
+            display: inline-block
+            display: none
+
+            button
+                padding: 5px 5px
+                margin: 0 3px
+                border: none
+                border-radius: 5px
+                text-transform: uppercase
+                cursor: pointer
+                background: none
+                transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s
+
+            button:hover
+                background-color: #e7dede
+                box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
+                transform: translate(-2px, -5%)
+
+            .complete
+                color: royalblue
+            .edit
+                color: $dark-color
+            .delete
+                color: $red-color
+
+.popUp
+    display: flex
+    flex-direction: column
+    align-items: center
+    position: fixed
+    bottom: 20px
+    width: 90%
+    max-width: 500px
+    height: 250px
+    background: linear-gradient(180deg, #c97575 0%, #ddb3b3 100%)
+    border-radius: 10px
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6)
+
+    p
+        padding: 10px
+        // margin-bottom: 10px
+        width: 100%
+        text-align: center
+        letter-spacing: 2px
+        color: whitesmoke
+        text-shadow: 2px 2px 2px black
+        font-size: 26px
+        background-color: #c97575
+        border-radius: 10px 10px 0 0
+
+    .popUpInput
+        min-width: 230px
+        width: 70%
+        height: 40px
+        font-size: 18px
+        border: 2px solid #ddb3b34f
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
+        outline: none
+        border-radius: 10px
+        // margin-right: 10px
+        padding: 10px
+        margin: 20px 0 20px 0
+        background-color: $light-color
+
+    .popUpBtnWrapper
+
+        .popUpBtn
+            padding: 10px
+            margin: 5px
+            font-size: 12px
+            border-radius: 10px
+            border: 1px solid $dark-color
+            font-weight: bold
+            color: #311414
+            // box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
+            background-color: $light-color
+            text-transform: uppercase
+            cursor: pointer
+            transition: background-color 0.3s, color 0.3s, transform 0.3s, box-shadow 0.3s
+
+        .popUpBtn:hover
+            background-color: $dark-color
+            color: $light-color
 
     .tools
         display: inline-block
+        margin-top: 10px
 
         button
             padding: 10px 15px
-            margin: 0 5px
+            margin: 0px 5px
             border: none
             border-radius: 5px
             text-transform: uppercase
@@ -103,16 +249,21 @@ body
             background: none
             transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s
 
+            i
+                font-size: 25px
+
         button:hover
-            background-color: #e7dede
+            background-color: $light-color
             box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
             transform: translate(-2px, -5%)
-            
-        .complete
-            color: royalblue
-        .edit
-            color: $dark-color
-        .delete
-            color: $red-color
 
-// .popUpEditTask
+    .complete
+        color: royalblue
+    .delete
+        color: $red-color
+
+.popUpEditTask
+    height: 200px
+    display: none
+.popUpTools
+    display: none
