--- a/mediumStyle.sass
+++ b/mediumStyle.sass
@@ -13,8 +13,9 @@
                 display: inline-block
 
         .taskWrapper
+            flex-direction: row
             .task
-                width: 65%
+                width: 63%
                 text-align: left
             .tools
                 display: inline-block
