--- a/style.sass
+++ b/style.sass
@@ -27,6 +27,9 @@ body
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4)
     border-radius: 5px
 
+    .taskSampleContainer
+        display: none
+
 .header
     padding: 40px 30px 50px 30px
     border-radius: 5px 5px 0 0
