--- a/style.sass
+++ b/style.sass
@@ -8,6 +8,7 @@ $red-color: #c95f5f
     box-sizing: border-box
     margin: 0
     padding: 0
+    font-family: 'Open Sans', sans-serif
 
 body
     display: flex
@@ -16,7 +17,6 @@ body
     margin: 5% 10px 5% 10px !important
     align-items: center
     background-color: $light-color
-    font-family: 'Open Sans', sans-serif
 
     .hideDateInput
         display: none
@@ -40,12 +40,12 @@ body
         text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.8)
         letter-spacing: 3px
         padding: 10px 15px
-        font-size: 28px
+        // font-size: 28px
         text-transform: uppercase
 
     .toDoInput, .dateInput
         min-width: 230px
-        margin: 10px
+        margin: 20px 10px
         width: 70%
         height: 40px
         font-size: 18px
@@ -58,7 +58,7 @@ body
         background-color: $light-color
 
     .dateInput
-        max-width: 250px
+        // max-width: 230px
         margin: auto
 
     .addBtn
