--- a/mediumStyle.sass
+++ b/mediumStyle.sass
@@ -23,3 +23,6 @@
                 button
                     padding: 10px
                     margin: 0 5px
+.header
+    .dateInput
+        // max-width: 260px
